# pyrofile

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
python/pyrofile/: __init__.py  _pyrofile.pyi
scripts/: setup_azurite.py
src/: error.rs  lib.rs
src/backend/: azure.rs  local.rs  mod.rs  smart_writer.rs  traits.rs
src/core/: buffer.rs  config.rs  file.rs  mod.rs
src/python/: file.rs  mod.rs
tests/python/: test_azure_integration.py  test_local.py
