[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyrofile"
version = "0.1.0"
description = "File-like object for accessing local and cloud storage"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Nate Prewitt", email = "nate.prewitt@gmail.com" }]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
]

[project.urls]
Homepage = "https://github.com/nateprewitt/pyrofile"
Source = "https://github.com/nateprewitt/pyrofile"
Issues = "https://github.com/nateprewitt/pyrofile/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "pyrofile._pyrofile"

[project.optional-dependencies]
dev = ["pytest>=7", "torch>=2.0"]
